--- a/app/less/style.less
+++ b/app/less/style.less
@@ -8,13 +8,12 @@
 }
 
 body{
-	font-family: "OpenSans-Regular", sans-serif;
+	font-family: "Open Sans Regular", sans-serif;
 	font-weight: normal;
 	font-size: 16px;
 	min-width: 320px;
 	position: relative;
 	line-height: 1.6;
-	overflow-x: hidden;
 	opacity: 1;
 }
 
@@ -28,7 +27,7 @@ body{
 .header{
 	background-color: @main;
 	color: #fff;
-	font-family: "OpenSans-Bold", sans-serif;
+	font-family: "Open Sans Bold", sans-serif;
 	padding-bottom: 70px;
 	&__title{
 		padding: 70px 0;
@@ -51,6 +50,7 @@ body{
 	justify-content: space-between;
 	text-align: left;
 	flex-wrap: wrap;
+	font-family: "Open Sans Regular", sans-serif;
 	&__info{
 		display: flex;
 		flex-wrap: wrap;
@@ -62,11 +62,11 @@ body{
 			opacity: 0.5;
 			font-size: 20px;
 			color: #fff;
-			font-family: "OpenSans-Regular", sans-serif;
 			font-weight: normal;
 			line-height: 1.2;
 			letter-spacing: normal;
 			width: 100%;
+			margin-bottom: 10px;
 		}
 		p{
 			font-size: 18px;
@@ -99,7 +99,7 @@ body{
 	&:active,
 	&:focus,{
 		background-color: #d2d2d2;
-		.tr();
+		.transition();
 	}
 }
 
@@ -125,14 +125,16 @@ body{
 		height: 50px;
 		display: block;
 		margin: 0 auto;
+		margin-bottom: 16px;
 	}
 	a{
 		color: #fff;
 		text-decoration: none;
 		border-bottom: solid 1px rgba(151, 151, 151, 0.5);
+		font-size: 20px;
 		&:hover{
 			color: @red;
-			.tr();
+			.transition();
 		}
 	}
 }
