--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,20 +1,19 @@
-.tr {
-  -webkit-transition: all 0.25s easse;
-  -o-transition: all 0.25s easse;
-  transition: all 0.25s easse;
+.transition {
+  -webkit-transition: linear 1s ease-in;
+  -o-transition: linear 1s ease-in;
+  transition: linear 1s ease-in;
 }
 * {
   padding: 0;
   margin: 0;
 }
 body {
-  font-family: "OpenSans-Regular", sans-serif;
+  font-family: "Open Sans Regular", sans-serif;
   font-weight: normal;
   font-size: 16px;
   min-width: 320px;
   position: relative;
   line-height: 1.6;
-  overflow-x: hidden;
   opacity: 1;
 }
 .title {
@@ -26,7 +25,7 @@ body {
 .header {
   background-color: #1a1a1a;
   color: #fff;
-  font-family: "OpenSans-Bold", sans-serif;
+  font-family: "Open Sans Bold", sans-serif;
   padding-bottom: 70px;
 }
 .header__title {
@@ -61,6 +60,7 @@ body {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
+  font-family: "Open Sans Regular", sans-serif;
 }
 .advantages__info {
   display: -webkit-box;
@@ -79,11 +79,11 @@ body {
   opacity: 0.5;
   font-size: 20px;
   color: #fff;
-  font-family: "OpenSans-Regular", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
   width: 100%;
+  margin-bottom: 10px;
 }
 .advantages__item p {
   font-size: 18px;
@@ -115,9 +115,9 @@ body {
 .button:active,
 .button:focus {
   background-color: #d2d2d2;
-  -webkit-transition: all 0.25s easse;
-  -o-transition: all 0.25s easse;
-  transition: all 0.25s easse;
+  -webkit-transition: linear 1s ease-in;
+  -o-transition: linear 1s ease-in;
+  transition: linear 1s ease-in;
 }
 .dark {
   background-color: #262626;
@@ -153,17 +153,19 @@ body {
   height: 50px;
   display: block;
   margin: 0 auto;
+  margin-bottom: 16px;
 }
 .problem a {
   color: #fff;
   text-decoration: none;
   border-bottom: solid 1px rgba(151, 151, 151, 0.5);
+  font-size: 20px;
 }
 .problem a:hover {
   color: #ff2e2f;
-  -webkit-transition: all 0.25s easse;
-  -o-transition: all 0.25s easse;
-  transition: all 0.25s easse;
+  -webkit-transition: linear 1s ease-in;
+  -o-transition: linear 1s ease-in;
+  transition: linear 1s ease-in;
 }
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
